--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
 body {
     background-color: beige;
+    text-shadow:
+        -1px -1px 0 #fff,
+        1px -1px 0 #fff,
+        -1px 1px 0 #fff,
+        1px 1px 0 #fff;
 }
 
 h1 {
