--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
     background-color: beige;
+    text-align: center;
     text-shadow:
         -1px -1px 0 #fff,
         1px -1px 0 #fff,
@@ -9,6 +10,11 @@ body {
 
 h1 {
     color: cornflowerblue;
+}
+
+#clock {
+    font-size: 48px;
+    font-display: center;
 }
 
 .clicked {
@@ -21,4 +27,15 @@ h1 {
 
 .hidden {
     display: none;
+}
+
+#todo-list {
+    list-style-type: none; /* 기본 리스트 스타일 제거 */
+    padding: 0; /* 리스트의 패딩 제거 */
+    margin: 0 auto; /* 좌우 여백을 0으로 설정하여 가운데 정렬 */
+    width: fit-content; /* 내용에 맞게 리스트의 너비 설정 */
+}
+
+#todo-list li {
+    text-align: left; /* <li> 요소를 왼쪽 정렬로 설정 */
 }
