--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ h1 {
 }
 
 #clock {
-    font-size: 48px;
+    font-size: 100px;
     font-display: center;
 }
 
@@ -29,13 +29,30 @@ h1 {
     display: none;
 }
 
-#todo-list {
+#todos {
     list-style-type: none; /* 기본 리스트 스타일 제거 */
     padding: 0; /* 리스트의 패딩 제거 */
     margin: 0 auto; /* 좌우 여백을 0으로 설정하여 가운데 정렬 */
     width: fit-content; /* 내용에 맞게 리스트의 너비 설정 */
+    position: fixed; /* 요소를 고정 위치로 설정합니다. */
+    bottom: 20px; /* 하단에서 0px 만큼 떨어진 위치로 설정합니다. */
+    left: 20px; /* 좌측에서 50% 위치로 설정합니다. */
+    
 }
 
 #todo-list li {
     text-align: left; /* <li> 요소를 왼쪽 정렬로 설정 */
+}
+
+#weather {
+    display: flex;
+    align-items: center; /* 요소를 수직으로 가운데 정렬합니다. */
+    position: absolute; /* 절대 위치로 설정합니다. */
+    top: 0; /* 위쪽에서 0px 만큼 떨어진 위치로 설정합니다. */
+    right: 20px; /* 오른쪽에서 20px 만큼 떨어진 위치로 설정합니다. */
+}
+
+#weather span {
+    display: inline-flex; /* 요소를 인라인 플렉스 박스로 설정합니다. */
+    align-items: center; /* 요소 내의 내용을 수직으로 가운데 정렬합니다. */
 }
